<resources>
    <string name="app_name">SmartSecretary</string>
    <string name="create_alarm">新 增 鬧 鐘</string>
    <string name="title_name">智 慧 秘 書</string>
    <string name="new_note">新 增\n提 醒</string>
    <string name="_new">新 增</string>
    <string name="my_alarm">鬧 鐘</string>
    <string name="my_note">記 事 本</string>
    <string name="alarm_setting">鬧 鐘 設 定</string>
    <string name="music_setting">鈴 聲 設 定</string>
    <string name="voice">語 音</string>
    <string name="image">照 片</string>
    <string name="date_num">2018/08/08</string>
    <string name="date">日 期</string>
    <string name="sound">鈴 聲</string>
    <string name="back">返 回</string>
    <string name="finish">完 成</string>
    <string name="time_num">07 : 30</string>
    <string name="time">時 間</string>
    <string name="title">標 題</string>
    <string name="content">內 容</string>
    <string name="determine">確 定</string>
    <string name="cancel">取 消</string>
    <string name="noSet">未 命 名</string>
    <string name="unknow">未 知</string>
    <string name="remind">提 醒</string>
    <string name="please_content">請 輸 入 內 容</string>
    <string name="please_title">請 輸 入 標 題</string>
    <string name="input_outline">輸入內容達到上限</string>
    <string name="open_Alaem">開 啟 提 醒</string>
    <string name="close_Alaem">關 閉 提 醒</string>
    <string name="new_success">新 增 提 醒</string>
    <string name="brfore_time">輸入的" 時間已過 "，無法開啟提醒</string>
    <string name="is_brfore_time_reset">輸入的" 時間已過 "，無法開啟提醒\n 若要更改請刪除重新設定</string>
    <string name="reset_time">請重新設定日期時間</string>
    <string name="close_clock">關 閉 鬧 鐘</string>
    <string name="sound_default">預設</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="sure_delete">確定要  刪除  </string>
    <string name="sure_change">確定要  更改 嗎?</string>
    <string name="sure_determine">確定更改  </string>
    <string name="store_set">儲  存  設  定</string>
    <string name="cancel_return">取 消 返 回</string>
</resources>
