<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMusicBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/colorPrimary"
            android:text="@string/back"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvMusicSetting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@color/colorPrimaryLight"
            android:gravity="center"
            android:text="@string/music_setting"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnMusicDetermine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="@color/colorPrimary"
            android:text="@string/determine"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/musicList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false"
        android:choiceMode="singleChoice"/>
</LinearLayout>