<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="12"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7.3"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/colorPrimary"
                android:text="@string/back"
                android:textColor="@android:color/background_light"
                android:textSize="24dp" />

            <Button
                android:id="@+id/date_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:background="@color/colorPrimaryLight"
                android:text="@string/date_num"
                android:textColor="@android:color/background_light"
                android:textSize="28dp"
                 />

            <Button
                android:id="@+id/finish_add_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@color/colorPrimary"
                android:text="@string/_new"
                android:textColor="@android:color/background_light"
                android:textSize="24dp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/clock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_weight="100"
                android:text="@string/time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_clock"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="0.1"
                    android:background="@drawable/icon_clock"
                    app:layout_constraintLeft_toLeftOf="@+id/date_view"
                    app:layout_constraintTop_toBottomOf="@+id/finish_add_item" />

                <Button
                    android:id="@+id/btn_clock_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/time_num"
                    android:textColor="@android:color/tab_indicator_text"
                    android:textSize="30dp"
                    android:background="#fafafa" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:orientation="vertical">
                <TextView
                android:id="@+id/alarm_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/remind"
                android:textSize="17dp" />
                <Switch
                    android:id="@+id/alarm_switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:textColor="@android:color/tab_indicator_text"
                    android:text="off"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5.6"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2.3"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="10"
                    app:counterOverflowTextAppearance="@style/MyOverflowText"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyErrorText"
                    app:hintTextAppearance="@style/MyHintText">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_title"
                    android:theme="@style/MyEditText" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/photo_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="6"
                    android:background="@drawable/button_rounde"
                    android:gravity="center"
                    android:text="@string/image"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16dp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/voice_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="6"
                    android:background="@drawable/button_rounde"
                    android:gravity="center"
                    android:text="@string/voice"
                    android:textColor="@color/colorPrimaryLight"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="150"
            app:counterOverflowTextAppearance="@style/MyOverflowText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/MyErrorText"
            app:hintTextAppearance="@style/MyHintText">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/content_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_content"
                android:theme="@style/MyEditText" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />
        </android.support.design.widget.TextInputLayout>
    </ScrollView>
</LinearLayout>