<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">

    <Button
        android:id="@+id/article_date"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:text="@string/date_num"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/article_time"
        app:layout_constraintHorizontal_weight="3"/>
    <Button
        android:id="@+id/article_time"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:gravity="center_vertical"
        android:text="@string/time_num"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/article_date"
        app:layout_constraintRight_toLeftOf="@+id/article_close"
        app:layout_constraintHorizontal_weight="3"
        />

    <Button
        android:id="@+id/article_close"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/background_light"
        android:text="@string/finish"
        android:textColor="@color/colorPrimaryLight"
        android:textStyle="bold"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/article_time"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ScrollView
        android:id="@+id/scroll_article"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/article_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:counterOverflowTextAppearance="@style/MyOverflowText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/MyErrorText"
                app:hintTextAppearance="@style/MyHintText">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_text_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_title"
                    android:theme="@style/MyEditText"
                    android:textSize="30dp"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/content_article"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="150"
                    app:counterOverflowTextAppearance="@style/MyOverflowText"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyErrorText"
                    app:hintTextAppearance="@style/MyHintText">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/content_text_article"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/content"
                        android:theme="@style/MyEditText"
                        android:textSize="25dp"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>