<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SmartSecretary">
    <pl.droidsonroids.gif.GifImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/backg" />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:layout_gravity="center"
                style="@style/title_layout"
                android:text="@string/title_name" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
        <Space
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.8"/>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/new_button"
                style="@style/styleButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.2"
                android:text="@string/new_note" />
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal">
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="9" />

            <Button
                android:id="@+id/my_alarm_button"
                style="@style/styleButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="8"
                android:text="@string/my_alarm" />
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="8" />

            <Button
                android:id="@+id/my_note_button"
                style="@style/styleButton"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="8"
                android:text="@string/my_note" />
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />

            <Button
                android:id="@+id/voice_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.2"
                style="@style/styleButton"
                android:text="@string/voice" />
            <Space
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <Space
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1.1"/>

    </LinearLayout>

</FrameLayout>

